--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">I am Lanutemsu</h2>
-                        <p class="about__text">I studies Computer Science with main in Artificial Intelligence.I am intersted in the working of Computers in general.</p> 
+                        <p class="about__text">I study Computer Science with main in Data analytics.I am intersted in the working of Computers in general.</p> 
                         <br>You can contact me if you want stuffs done related to web-designing or any sort of programming.<br>
                     </div>                                   
                 </div>
@@ -81,7 +81,6 @@
 
                 <div class="skills__container bd-grid">          
                     <div>
-                        <h2 class="skills__subtitle">Skills</h2>
                         <p class="skills__text">There is so much to learn and explore in this computer age, which i hope to in the coming days.</p>
                         <div class="skills__data">
                             <div class="skills__names">
