--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 
                 <div class="skills__container bd-grid">          
                     <div>
+                        <h2 class="skills__subtitle">Skills</h2>
                         <p class="skills__text">There is so much to learn and explore in this computer age, which i hope to in the coming days.</p>
                         <div class="skills__data">
                             <div class="skills__names">
